AM_CPPFLAGS = -I@prefix@/include
AM_CXXFLAGS = -std=c++11 -Wall -O2 -ftemplate-depth-1024 -finline-functions -ggdb -g3 -DBOOST_LOG_DYN_LINK -lproj

lib_LTLIBRARIES =\
  librapio.la

# MRMS builder makes a lib folder one up from us with all the extra libraries
# we use.
librapio_la_LIBADD =\
   -L@prefix@/lib -lboost_system -lcurl -ludunits2 -lbz2 -ljasper -lpng -lboost_log -lboost_log_setup -lboost_thread -lpthread -lboost_filesystem -lboost_serialization -lboost_iostreams

librapio_la_SOURCES =\
  rArray.cc\
  rColor.cc\
  rColorMap.cc\
  rRAPIOAlgorithm.cc\
  rRAPIOOptions.cc\
  rRAPIOData.cc\
  rColorTerm.cc\
  rCurlConnection.cc\
  rEventTimer.cc\
  rEventLoop.cc\
  rCompression.cc\
  rSecure.cc\
  rSignals.cc\
  rRecord.cc\
  rRecordQueue.cc\
  rRecordNotifier.cc\
  rIOIndex.cc\
  rURL.cc\
  rConfig.cc\
  rConfigDirectoryMapping.cc\
  rConfigIODataType.cc\
  rIODataType.cc\
  rNetcdfDataType.cc\
  rGribDataType.cc\
  rImageDataType.cc\
  rGDALDataType.cc\
  rIndexType.cc\
  rError.cc\
  rIOXML.cc\
  rIOJSON.cc\
  rIOURL.cc\
  rOS.cc\
  rWebIndex.cc\
  rWebIndexWatcher.cc\
  rDirWatcher.cc\
  rProcessTimer.cc\
  rXMLIndex.cc\
  rStreamIndex.cc\
  rXYZ.cc\
  rIJK.cc\
  rConstants.cc\
  rLength.cc\
  rTimeDuration.cc\
  rTime.cc\
  rUnit.cc\
  rLL.cc\
  rLLH.cc\
  rStrings.cc\
  rBinaryTable.cc\
  rDataGrid.cc\
  rLatLonGrid.cc\
  rRadialSet.cc\
  rRadialSetLookup.cc\
  rDataTypeHistory.cc\
  rElevationVolume.cc\
  rDataType.cc\
  rPTreeData.cc\
  rFileIndex.cc\
  rFMLIndex.cc\
  rFMLRecordNotifier.cc\
  rEXERecordNotifier.cc\
  rHeartbeat.cc\
  rIOWatcher.cc\
  rFAMWatcher.cc\
  rEXEWatcher.cc\
  rOption.cc\
  rOptionList.cc\
  rAlgConfigFile.cc\
  rAWS.cc\
  rProject.cc\
  ccronexpr.c

pkginclude_HEADERS =\
  RAPIO.h\
  rArray.h\
  rColor.h\
  rColorMap.h\
  rRapio.h\
  rRAPIOAlgorithm.h\
  rRAPIOOptions.h\
  rRAPIOData.h\
  rColorTerm.h\
  rCurlConnection.h\
  rData.h\
  rAlgorithm.h\
  rEvent.h\
  rEventLoop.h\
  rEventTimer.h\
  rIO.h\
  rFactory.h\
  rStaticMethodFactory.h\
  rXMLIndex.h\
  rStreamIndex.h\
  rCompression.h\
  rURL.h\
  rProcessTimer.h\
  rWebIndex.h\
  rWebIndexWatcher.h\
  rDirWatcher.h\
  rSecure.h\
  rSignals.h\
  rIOIndex.h\
  rIOURL.h\
  rError.h\
  rConfig.h\
  rConfigIODataType.h\
  rConfigDirectoryMapping.h\
  rOS.h\
  rIODataType.h\
  rNetcdfDataType.h\
  rGribDataType.h\
  rImageDataType.h\
  rGDALDataType.h\
  rIOXML.h\
  rIOJSON.h\
  rIndexType.h\
  rLLH.h\
  rXYZ.h\
  rIJK.h\
  rConstants.h\
  rArith.h\
  rLL.h\
  rTimeDuration.h\
  rUnit.h\
  rStrings.h\
  rBinaryIO.h\
  rLength.h\
  rTime.h\
  rDataStore.h\
  rDataStore2D.h\
  rDataType.h\
  rPTreeData.h\
  rDataGrid.h\
  rBinaryTable.h\
  rRadialSet.h\
  rRadialSetLookup.h\
  rDataTypeHistory.h\
  rElevationVolume.h\
  rLatLonGrid.h\
  rFileIndex.h\
  rFMLIndex.h\
  rFMLRecordNotifier.h\
  rEXERecordNotifier.h\
  rHeartbeat.h\
  rIOWatcher.h\
  rFAMWatcher.h\
  rEXEWatcher.h\
  rOption.h\
  rOptionList.h\
  rSentinelDouble.h\
  rRecord.h\
  rRecordQueue.h\
  rRecordNotifier.h\
  rUtility.h\
  rAlgConfigFile.h\
  rAWS.h\
  rProject.h\
  rNamedAny.h

SUBDIRS     =\
  ionetcdf\
  iopython\
  iogrib\
  iogdal\
  ioimage

MAINTAINERCLEANFILES  = Makefile.in aclocal.m4 configure
